# sopht-mpi

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
doc/clusters/: README.md  submit.py  submit_bridges2.sh  submit_expanse.sh  submit_stampede2.sh
examples/: README.md
examples/2d_examples/FlowPastCylinderCase/: drag_coefficient_comparison.plot  flow_past_cylinder.py
examples/2d_examples/FlowPastRodCase/: flow_past_rod.py
examples/2d_examples/LambOseenVortexCase/: lamb_oseen_vortex.py
examples/3d_examples/FlowPastFreelyRotatingRodCase/: flow_past_freely_rotating_rod_case.py
examples/3d_examples/FlowPastRodCase/: flow_past_rod_case.py
examples/3d_examples/FlowPastSphereCase/: flow_past_sphere_case.py
examples/3d_examples/MagneticCiliaCarpetCase/: immersed_magnetic_cilia_carpet.py  magnetic_cilia_carpet.py
examples/3d_examples/PointSourceAdvectAndDiffuseCase/: point_source_advection_diffusion.py
sopht_mpi/numeric/eulerian_grid_ops/: __init__.py
sopht_mpi/numeric/immersed_boundary_ops/: EulerianLagrangianGridCommunicatorMPI2D.py  EulerianLagrangianGridCommunicatorMPI3D.py  VirtualBoundaryForcingMPI.py  __init__.py
sopht_mpi/simulator/flow/: __init__.py  flow_simulators_mpi_2d.py  flow_simulators_mpi_3d.py
sopht_mpi/sopht_mpi_simulator/: __init__.py
sopht_mpi/utils/: __init__.py  mpi_io.py  mpi_logger.py  mpi_utils.py  mpi_utils_2d.py  mpi_utils_3d.py
tests/test_utils/: test_mpi_io_2d.py  test_mpi_io_3d.py  test_mpi_logger.py  test_mpi_utils_2d.py  test_mpi_utils_3d.py
(+92 files in other folders)
